fixing background color for better contrast

--- a/about/about.css
+++ b/about/about.css
@@ -2,7 +2,7 @@ html {
     background-color: #5F4B8B;
 }
 body {
-    background-color: #f9f9f9;
+    background-color: #fefefe;
     min-width: 360px;
   }
   
@@ -25,7 +25,7 @@ body {
     color: #4a4a4a;
     border-radius: 20px;
     padding: 35px;
-    box-shadow: 0px 30px 50px -20px rgba(0,0,0,0.5)
+    box-shadow: 0px 1px 10px 0 rgba(0,0,0,.5), 0px 30px 50px -20px rgba(0,0,0,0.5)
   }
   
   .circle-img{
